...
                        .padding(vertical = 16.dp)
                ) {
                    Text(text = "Xác nhận OTP")
                }
            } else if (uiState.currentStep == 1) {
                Text(
                    text = "Bắt Đầu Sử Dụng Ngay",
                    style = TextStyle(fontSize = 32.sp, fontWeight = FontWeight.Bold),
                    textAlign = TextAlign.Left,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(bottom = 4.dp)
                )
                Text(
                    text = "ZoLA trò chuyện mọi nơi",
                    style = TextStyle(fontSize = 16.sp),
                    color = Color.Gray,
                    textAlign = TextAlign.Right,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(bottom = 16.dp)
...
                    thickness = DividerDefaults.Thickness
                )
                OutlinedTextField(
                    value = uiState.firstName,
                    onValueChange = registerViewModel.setFirstName,
                    singleLine = true,
                    label = { Text("Tên người dùng") },
                    placeholder = { Text("Nhập tên người dùng") },
                    keyboardOptions = KeyboardOptions(
                        imeAction = ImeAction.Next
                    ),
                    keyboardActions = KeyboardActions(
                        onNext = {
                            focusManager.moveFocus(FocusDirection.Next)
...
                )

                OutlinedTextField(
                    value = uiState.lastName,
                    onValueChange = registerViewModel.setLastName,
                    singleLine = true,
                    label = { Text("Họ và tên đệm") },
                    placeholder = { Text("Nhập họ và tên đệm người dùng") },
                    keyboardOptions = KeyboardOptions(
                        imeAction = ImeAction.Next
                    ),
                    keyboardActions = KeyboardActions(
                        onNext = {
                            focusManager.moveFocus(FocusDirection.Next)
...
                        .padding(vertical = 4.dp),
                )

                OutlinedTextField(
                    value = uiState.phoneNumber,
                    onValueChange = registerViewModel.setPhoneNumber,
                    label = { Text("Số điện thoại") },
                    placeholder = { Text("Nhập số điện thoại người dùng") },
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(
                        imeAction = ImeAction.Next
                    ),
                    keyboardActions = KeyboardActions(
                        onNext = {
...
                        .padding(vertical = 4.dp),
                )

                OutlinedTextField(
                    value = uiState.email,
                    onValueChange = registerViewModel.setEmail,
                    label = { Text("Địa chỉ Email") },
                    placeholder = { Text("Nhập địa chỉ Email tài khoản") },
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(
                        imeAction = ImeAction.Next
                    ),
                    keyboardActions = KeyboardActions(
                        onNext = {
...
                        .padding(vertical = 4.dp),
                )

                OutlinedTextField(
                    value = uiState.password,
                    onValueChange = registerViewModel.setPassword,
                    label = { Text("Mật khẩu") },
                    placeholder = { Text("Nhập mật khẩu tài khoản") },
                    visualTransformation = PasswordVisualTransformation(),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(
                        keyboardType = KeyboardType.Password,
                        imeAction = ImeAction.Next
                    ),
...
                    ),
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(vertical = 4.dp)
                )
                Text(
                    text = "Mật khẩu cần tối thiểu 8 ký tự",
                    style = TextStyle(fontSize = 12.sp, color = Color.Gray),
                    modifier = Modifier
                        .align(Alignment.Start)
                        .padding(start = 8.dp, bottom = 8.dp)
                )
                OutlinedTextField(
                    value = uiState.confirmPassword,
                    onValueChange = registerViewModel.setConfirmPassword,
                    label = { Text("Xác nhận mật khẩu") },
                    placeholder = { Text("Nhập lại mật khẩu") },
                    visualTransformation = PasswordVisualTransformation(),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
                    keyboardActions = KeyboardActions(
                        onDone = {
                            focusManager.clearFocus()
...
                Button(
                    onClick = { registerViewModel.setCurrentStep(2) },
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(vertical = 16.dp)
                ) {
                    Text(text = "Tiếp theo")
                }
                Row(
                    horizontalArrangement = Arrangement.Center,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(top = 32.dp)
                ) {
                    Text(text = "Đã có tài khoản?")
                    Spacer(modifier = Modifier.width(4.dp))
                    Text(
                        text = "Đăng nhập ngay",
                        color = MaterialTheme.colorScheme.primary,
                        modifier = Modifier.clickable {
                            navController.navigate(FacebookScreen.LOGIN.name)
                        }
                    )
                }
...
                        .padding(8.dp)
                        .padding(horizontal = 16.dp),
                    horizontalAlignment = Alignment.CenterHorizontally,
                    verticalArrangement = Arrangement.Center
                ) {
                    Text(
                        text = "Chọn hình ảnh đại diện",
                        style = TextStyle(fontSize = 32.sp, fontWeight = FontWeight.Bold),
                        textAlign = TextAlign.Left,
                        modifier = Modifier.fillMaxWidth()
                    )
                    Text(
                        text = "Thể hiện cá tính của bạn",
                        style = TextStyle(fontSize = 16.sp, fontWeight = FontWeight.Bold),
                        color = Color.Gray,
                        textAlign = TextAlign.Left,
                        modifier = Modifier
                            .padding(vertical = 8.dp)
                            .fillMaxWidth()
...
                    Button(
                        onClick = registerViewModel.handleRegister,
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(vertical = 16.dp)
                    ) {
                        Text(text = "Hoàn thành đăng ký")
                    }
                    Button(
                        onClick = { registerViewModel.setCurrentStep(1) },
                    ) {
                        Text(text = "Quay lại")
                    }
...
